--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Parses twitch chat rooms and finds matching character combinations",
   "main": "index.js",
   "scripts": {
-    "dev": "npm start",
-    "start": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "eslint-config-airbnb": "^18.0.1",
-    "node-irc": "0.0.4"
+    "lodash": "^4.17.15",
+    "node-irc": "0.0.4",
+    "tmi.js": "^1.5.0"
   }
 }
