--- a/config-example.json
+++ b/config-example.json
@@ -1,5 +1,5 @@
 {
     "channels": ["#moonmoon"],
-    "clientId": "asdfasdfasdfasdfasdfasdf",
+    "clientId": "thisisyourclientid",
     "debug": false
 }
